--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,5 @@ publish = "public"
 [functions]
 directory = "netlify/functions"
 node_bundler = "esbuild"
+external_node_modules = ["pdfkit"]             
+included_files = ["node_modules/pdfkit/js/data/**"]  
